...
    @State var nameUser = ""
    @State var passwordUser = ""
    @State private var pass = true
    var body: some View {
        VStack {
            
            username
            
            password
            
        }
    }
}
...
                        .bold()
                        .foregroundColor(.gray)
                }
                
                if pass {
                    SecureField("", text: $viewModel.login.password)
                        .accessibilityIdentifier("passwordSecureField")
                        .frame(height: 22)
                } else {
                    TextField("", text: $viewModel.login.password)
                        .accessibilityIdentifier("passwordTextField")
                        .frame(height: 22)
                }
...
