...
                            .edgesIgnoringSafeArea(.all)
                        
                        VStack {
                            Spacer()
                            
                            VStack {
                                AppBarView(image: "logo", name: "animecrunch", isSearchButton: false, isAirplay: false)
                                Text("All your favorite Japanese animations. Now gathered in one place.")
                                    .foregroundColor(Color("colorSet"))
                                    .padding()
                                    .bold()
                                    .multilineTextAlignment(.center)
                                
...
                                            .padding(.top, -10)
                                            .padding(.bottom, -12)
                                    )
                                    .padding()
                                
                                
                                NavigationLink("Login",destination: LoginScreenView())
                                    .accessibilityIdentifier("Login")
                                    .tint(.orange)
                                    .frame(maxWidth: .infinity)
                                    .padding(.horizontal)
                                    .font(.custom("Helvetica Neue Bold", size: 20))
                                    .overlay(
...
